--- a/index.html
+++ b/index.html
@@ -17,34 +17,67 @@
   </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-  <script src="js/sidebar.js" defer></script>
+  <script defer="" src="js/sidebar.js">
+  </script>
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
   <header class="banner banner-homepage header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <a class="navbar-brand" href="/" style="align-self: flex-start"><img class="navbar-logo" src="images/Home-Logo.png" alt="Energy Storage Industries - Asia Pacific"></a>
-    <a onclick="openSidebar()" class="sidebar-menu" aria-expanded="false" aria-label="Toggle navigation" href="#">
-     <span class="navbar-toggler-icon"> </span>
+    <a class="navbar-brand" href="/" style="align-self: flex-start">
+     <img alt="Energy Storage Industries - Asia Pacific" class="navbar-logo" src="images/Home-Logo.png"/>
     </a>
-<!--DESKTOP SIDEBAR-->
+    <a aria-expanded="false" aria-label="Toggle navigation" class="sidebar-menu" href="#" onclick="openSidebar()">
+     <span class="navbar-toggler-icon">
+     </span>
+    </a>
+    <!--DESKTOP SIDEBAR-->
     <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
       <li class="nav-item">
-       <a class="nav-link btn" href="/">Home</a>
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-        <li><a class="dropdown-item btn btn-sub" href="/board">Board</a></li>
-        <li><div class="dropdown-divider"></div></li>
-        <li><a class="dropdown-item btn btn-sub" href="/senior">Senior Mangement</a></li>
-        <li><div class="dropdown-divider"></div></li>
-        <li><a class="dropdown-item btn btn-sub" href="/environment">Environment, Social<br/>and Governance</a></li>
-        <li><div class="dropdown-divider"></div></li>
-        <li><a class="dropdown-item btn btn-sub" href="/careers">Careers</a></li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
        </ul>
       </li>
       <li class="nav-item dropdown">
@@ -52,13 +85,38 @@
         Products &amp; services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-        <li><a class="dropdown-item btn btn-sub" href="/introduction">Introduction</a></li>
-        <li><div class="dropdown-divider"></div></li>
-        <li><a class="dropdown-item btn btn-sub" href="/transition">Energy Transition</a></li>
-        <li><div class="dropdown-divider"></div></li>
-        <li><a class="dropdown-item btn btn-sub" href="/chemistry">Chemistry</a></li>
-        <li><div class="dropdown-divider"></div></li>
-        <li><a class="dropdown-item btn btn-sub" href="/solutions">Solutions</a></li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/introduction">
+          Introduction
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
        </ul>
       </li>
       <li class="nav-item dropdown">
@@ -66,79 +124,164 @@
         Operations
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-        <li><a class="dropdown-item btn btn-sub" href="/maryborough">Maryborough</a></li>
-        <li><div class="dropdown-divider"></div></li>
-        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/townsville">
+          Townsville
+         </a>
+        </li>
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="https://press.esiap.com.au">News and media</a>
+       <a class="nav-link btn" href="https://press.esiap.com.au">
+        News and media
+       </a>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="/contact">Contact</a>
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
       </li>
      </ul>
     </div>
-<!--    MOBILE SIDEBAR HERE-->
-    <div id="mobileSidebar" class="sidebar">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
-       <li class="nav-item">
-        <a class="nav-link btn" href="/">Home</a>
-       </li>
-       <li class="nav-item dropdown">
-        <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-         About Us
-        </a>
-        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-         <li><a class="dropdown-item btn btn-sub" href="/board">Board</a></li>
-         <li><div class="dropdown-divider"></div></li>
-         <li><a class="dropdown-item btn btn-sub" href="/senior">Senior Mangement</a></li>
-         <li><div class="dropdown-divider"></div></li>
-         <li><a class="dropdown-item btn btn-sub" href="/environment">Environment, Social<br/>and Governance</a></li>
-         <li><div class="dropdown-divider"></div></li>
-         <li><a class="dropdown-item btn btn-sub" href="/careers">Careers</a></li>
-        </ul>
-       </li>
-       <li class="nav-item dropdown">
-        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-         Products &amp; services
-        </a>
-        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-         <li><a class="dropdown-item btn btn-sub" href="/introduction">Introduction</a></li>
-         <li><div class="dropdown-divider"></div></li>
-         <li><a class="dropdown-item btn btn-sub" href="/transition">Energy Transition</a></li>
-         <li><div class="dropdown-divider"></div></li>
-         <li><a class="dropdown-item btn btn-sub" href="/chemistry">Chemistry</a></li>
-         <li><div class="dropdown-divider"></div></li>
-         <li><a class="dropdown-item btn btn-sub" href="/solutions">Solutions</a></li>
-        </ul>
-       </li>
-       <li class="nav-item dropdown">
-        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-         Operations
-        </a>
-        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-         <li><a class="dropdown-item btn btn-sub" href="/maryborough">Maryborough</a></li>
-         <li><div class="dropdown-divider"></div></li>
-         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>
-        </ul>
-       </li>
-       <li class="nav-item">
-        <a class="nav-link btn" href="https://press.esiap.com.au">News and media</a>
-       </li>
-       <li class="nav-item">
-        <a class="nav-link btn" href="/contact">Contact</a>
-       </li>
-      </ul>
+    <!--    MOBILE SIDEBAR HERE-->
+    <div class="sidebar" id="mobileSidebar">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/introduction">
+          Introduction
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/townsville">
+          Townsville
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
     </div>
-   <div id="blocker" class="page-blocker" onclick="closeSidebar()"></div>
+    <div class="page-blocker" id="blocker" onclick="closeSidebar()">
+    </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
-<!--END NAVBAR-->
+   <!--END NAVBAR-->
    <div class="banner-text">
     <div class="row">
      <div class="col banner-logo">
-      <img style="padding-right: 30px; margin-left: auto" alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
      <div class="col banner-tagline">
       <h1>
