--- a/maryborough.html
+++ b/maryborough.html
@@ -281,7 +281,7 @@
    </div>
   </header>
   <main class="content-block">
-   <div style="width: 80%; margin: auto">
+   <div class="news-article">
 <!--    <div class="text-column chemistry-header">-->
 <!--    </div>-->
     <div class="text-column" >
@@ -307,7 +307,7 @@
         <img class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%203.jpg" alt="Maryborough Facility 3"/>
         <span class="next banner-button event-button" onclick="plusSlide(1)">&#10095;</span>
     </div>
-    <div style="text-align:center; margin-top: -26px; margin-bottom: 30px">
+    <div class="event-dox-box" style="text-align:center; margin-bottom: 30px">
         <span style="padding: 2px; border-radius: 5px; background-color: rgba(0,0,0,.5);">
             <span class="event-dot" onclick="currentSlide(1)"></span>
             <span class="event-dot" onclick="currentSlide(2)"></span>
